--- a/style.css
+++ b/style.css
@@ -1,4 +1,19 @@
 body{
-    color:rgb(154, 207, 221);
+    color:rgb(11, 39, 47);
     text-align: center;
+    background-color: rgb(154, 207, 221);
+    margin-top: 10%;
+    margin-left: 10%;
+    margin-right: 10%;
+    font-family:Arial, Helvetica, sans-serif ;
+}
+
+h1{
+    color:rgb(11, 39, 47);
+    font-size: 50px; 
+    margin-top:10%
+}
+p{
+    color:rgb(11, 47, 29);  
+    font-size: 25px;
 }
