--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
 body{
-    color:rgb(11, 39, 47);
-    text-align: center;
-    background-color: rgb(154, 207, 221);
-    margin-top: 5%;
-    margin-left: 5%;
-    margin-right: 5%;
     font-family:Arial, Helvetica, sans-serif ;
 }
 
 #barco{
     width:100%;
+}
+
+.PRINCIPAL{
+    background-color: rgb(154, 207, 221);
+    color:rgb(11, 39, 47);
+    text-align: center;
+    padding: 30px;
 }
 
 h1{
@@ -26,4 +27,29 @@ p{
 #contato{
     font-size: 12px;
     margin-inline-end: 10%;
+}
+
+.itens{
+    font-style:italic;
+}
+
+.SERVIÇOS{
+    background: #FFFFFF;
+    padding: 20px;
+}
+
+h2{
+    color:rgb(11, 39, 47);
+    text-align: center;
+}
+
+ul{
+    display: inline-block;
+    vertical-align: top;
+    width:20%;
+    margin-right: 15%;
+}
+
+.barco1{
+    width:50%;
 }
