--- a/style.css
+++ b/style.css
@@ -9,12 +9,15 @@ body{
 .PRINCIPAL{
     background-color: rgb(154, 207, 221);
     color:rgb(11, 39, 47);
-    text-align: center;
     padding: 30px;
 }
 
-h1{
-    color:rgb(11, 39, 47);
+.titulo-principal{
+    padding-left: 20px;
+}
+
+.titulo-centralizado{
+    text-align: center;
     font-size: 50px; 
     margin-top:10%;
 }
@@ -22,6 +25,7 @@ h1{
 p{
     color:rgb(11, 47, 29);  
     font-size: 25px;
+    text-align: center;
 }
 
 #contato{
@@ -38,11 +42,6 @@ p{
     padding: 20px;
 }
 
-h2{
-    color:rgb(11, 39, 47);
-    text-align: center;
-}
-
 ul{
     display: inline-block;
     vertical-align: top;
@@ -50,6 +49,6 @@ ul{
     margin-right: 15%;
 }
 
-.barco1{
+.vela{
     width:50%;
 }
